--- a/vignettes/NMsim-config.Rmd
+++ b/vignettes/NMsim-config.Rmd
@@ -84,7 +84,7 @@ On Windows, the executable has a `.bat` extension. The path could look be
 NMdataConf(path.nonmem ="C:/nm75g64/run/nmfe75.bat")
 ```
 
-If you normally use PSN as your Nonmem interface, and you therefore do
+If you normally use PSN as your Nonmem interface, and you do
 not know where Nonmem is installed, you can check this using PSN. The
 following command should give you the Nonmem installation paths that
 PSN is configured with. However, you likely still need to add the last
@@ -110,6 +110,9 @@ NMdataConf(dir.psn="/opt/PSN")
 Notice `dir.psn` refers to a directory while `path.nonmem`
 refers to a file. 
 
+
+### Test NMsim Configuration 
+Whether NMsim finds Nonmem after the configuration steps above can be checked by running `NMsimTestConf()`. Look for `$path.nonmem` (where NMsim is looking for the executable), `$exists.path.nonmem` (whethere the executable is found), and `$method.execute` (which method is selected - "nmsim" is prefered).
 
 ### Configure the directories `NMsim` writes to
 `NMsim` creates two main directories for its output.
@@ -146,34 +149,23 @@ over `method.execute="nmsim"`. In contrast, there are simulation types
 that will only work with `method.execute="nmsim"`. You need to tell
 NMsim where to find Nonmem (by setting `path.nonmem`) for this to work.
 
-Nonmem execution with `NMexec()` (typically, for estimation and not
-simulation) is a slightly different discussion. See `?NMexec` for
-that.
 
 ### PSN or not for updating initial values
 NMsim needs to update initial values using the model estimate prior to
-running a simulation. PSN provides the `update_inits` function to do
-this, and if available, this is the default method in NMsim. Again, we
-refer to this by the argument name, `method.update.inits="psn"`.
+running a simulation. 
+
+
+PSN provides the `update_inits` function to do
+this. We
+refer to this by how it is enabled in NMsim, `inits=list(method="psn")`.
 
 NMsim also provides a similar functionality internally, referred to as
-`method.update.inits="NMsim"`. This will be used if PSN is not found -
-or if you ask for it. 
+`inits=list(method="NMsim")`. This is the default method and comes with advanced features such as conservation of structure and comments of parameter sections, and a fully featured interface to specify values and features such as "fix" or limits of parameters.
 
-`method.update.inits="psn"` has two advantages over the NMsim-provided
-method. It is widely used, and it keeps comments in affected control
-stream sections (`$THETA`, `$OMEGA`,
-`$SIGMA`). `method.update.inits="nmsim"` will drop all comments in
-affected sections. I have in the past seen issues with some methods to
-update `$OMEGA` sections with off-diagonal elements
-(`BLOCK`). `method.update.inits="nmsim"` takes a very simple
-approach. Reading the `OMEGA` matrix from the `.ext` file, this is not
-relying on interpreting Nonmem code at all. The support of systems
-without `PSN` would be the main reason one would choose
-`method.update.inits="nmsim"` over `method.update.inits="psn"`.
+`inits=list(method="psn")` may be prefered by users who are familiar with PSN. `inits=list(method="psn")` has additional features, and no known down-sides.
 
-In order to make use of `method.update.inits="psn"`, you need to make
-sure NMsim can find PSN.
+In order to make use of `inits=list(method="psn")`, you need to make
+sure NMsim can find PSN. If you want to use `inits=list(method="NMsim")` you don't need to do anything.
 
 
 ### Input model file name extensions
@@ -184,8 +176,6 @@ There is no requirement to the file name extension of the input control stream.
 `NMsim` function documentation  and their argument `file.mod` refer to input control
 streams by `.mod`. However, the input control stream can have any extension (e.g., `.ctl` or `.txt`). 
 
-If your input control streams are named differently than `.mod`, avoid setting `file.mod` using `NMdata::NMdataConf(file.mod)`. 
-
 
 The estimate files (`.ext`, `.phi`
 if known subjects simulated, `.cov` if simulating parameters from the covariance step) are by default expected to carry
@@ -193,4 +183,4 @@ the same file name but with those file name extension. See arguments like `file.
 
 Output table files from input model may be needed. This is the case using `NMsim_known` on models estimated using Bayesian `$ESTIMATION` methods like `SAEM` and/or `$IMP`. In this case `NMsim` will need to find all the `ETA` values for all subjects, even if spread across the output tables. This is because these estimation methods leave `PHI` instead of `ETA` in the `.phi` file. For emperical Bayes estimates, `NMsim` needs the `ETA`s.
 
-There are no limitations to the file names of the output tables. If needed, file names will be automatically identified and read  using `NMdata::NMscanData`. For `$TABLE` options, subsetting is supported using `FIRSTONLY` and `LASTONLY`.
+There are no limitations to the file names of the output tables. 
